# api-manage-platform

./: .dockerignore  .env.compose.example  .env.example  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
config/: default.toml
docs/: architecture-design.md
docs/detailed-design/: api-routes.md  auth.md  config.md  database.md  errors.md  shutdown.md  startup.md
docs/superpowers/specs/: 2026-06-18-graceful-shutdown-design.md
migrations/: 001_create_tables.sql  002_seed_data.sql
src/: db.rs  errors.rs  lib.rs  main.rs  response.rs  state.rs  valkey.rs
src/auth/: jwt.rs  mod.rs  password.rs
src/config/: loader.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: auth.rs  mod.rs  role.rs  user.rs
src/routes/: auth.rs  health.rs  hello.rs  mod.rs  permissions.rs  roles.rs  users.rs
src/shutdown/: mod.rs  registry.rs  signals.rs
tests/: integration_test.rs
