[package]
name = "api-manage-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }

axum = { version = "0.8.9", features = ["macros"] }
tower = "0.5.3"
tower-http = { version = "0.7.0", features = ["cors", "trace"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

reqwest = { version = "0.13.4", features = ["json"] }

sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }

fred = { version = "10.1.0", features = ["enable-rustls"] }

thiserror = "2.0.18"
anyhow = "1.0.102"

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "tracing"] }
tracing-appender = "0.2.5"

validator = { version = "0.20.0", features = ["derive"] }

uuid = { version = "1.23.4", features = ["v7", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
dotenvy = "0.15.7"
config = "0.15.24"
argon2 = "0.5.3"
jsonwebtoken = "10.4.0"
base64 = "0.22.1"

# utoipa = { version = "5.5.0", features = ["axum_extras"] }
# utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }